// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#797 - replacing this.render should trigger a warning 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "The reactive render of an observer class component (Component)
                was overridden after MobX attached. This may result in a memory leak if the
                overridden reactive render was not properly disposed.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Redeclaring an existing observer component as an observer should log a warning 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "The provided component class (AlreadyObserver)
                has already been declared as an observer component.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`SSR works #3448 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "The reactive render of an observer class component (TestCmp)
                was overridden after MobX attached. This may result in a memory leak if the
                overridden reactive render was not properly disposed.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`issue 12 1`] = `
<div>
  <div>
    <span>
      coffee
      !
    </span>
    <span>
      tea
    </span>
  </div>
</div>
`;

exports[`issue 12 2`] = `
<div>
  <div>
    <span>
      soup
    </span>
  </div>
</div>
`;
